# local-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  mise.toml
.beads/: issues.jsonl
docs/: article.md
prds/: prd-initial-state-2025-12-24.md
src/: cli.rs  colors.rs  handlers.rs  lib.rs  main.rs  middleware.rs  state.rs
tests/: debug_proxy.rs  proxy_integration.rs
