[package]
name = "local-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
clap = { version = "4.0", features = ["derive"] }
mime_guess = { version = "2.0" }
reqwest = { version = "0.12", features = ["stream"] }
nanoid = { version = "0.4" }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6", features = [
  "trace",
  "compression-gzip",
  "compression-br",
  "compression-zstd",
  "fs"
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }
owo-colors = "4.2.2"
